tests/snapshots/examples_fixtures/type_system__failing__124_lambda_missing_close_paren.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/124_lambda_missing_close_paren.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Delimiter

Expected `)` to close lambda parameter list.

  examples/type_system/failing/124_lambda_missing_close_paren.flx:1:18
  |
1 | let add = /(x, y -> x + y
  |                  ^^

Hint:
  Use `/(x, y) -> expr` for parenthesized lambda parameters.


error[E034]: Missing Lambda Arrow

I was expecting `->` after the lambda parameters, but I found the end of the file.

  examples/type_system/failing/124_lambda_missing_close_paren.flx:3:1
  |

Note:
  while parsing lambda expression

Help:
  Use `/x -> expr` or `/(x, y) -> expr`.

Found 2 errors.
== stdout ==
<not executed>
